--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
       <div id="scoreboard" class="section">
         <ol>
-          <li class="tries"><img src="images/liveHeart.png" height="35px" widght="30px"></li>
-          <li class="tries"><img src="images/liveHeart.png" height="35px" widght="30px"></li>
-          <li class="tries"><img src="images/liveHeart.png" height="35px" widght="30px"></li>
-          <li class="tries"><img src="images/liveHeart.png" height="35px" widght="30px"></li>
-          <li class="tries"><img src="images/liveHeart.png" height="35px" widght="30px"></li>
+          <li class="tries"><img src="images/liveHeart.png" height="35" widght="30"></li>
+          <li class="tries"><img src="images/liveHeart.png" height="35" widght="30"></li>
+          <li class="tries"><img src="images/liveHeart.png" height="35" widght="30"></li>
+          <li class="tries"><img src="images/liveHeart.png" height="35" widght="30"></li>
+          <li class="tries"><img src="images/liveHeart.png" height="35" widght="30"></li>
         </ol>
       </div>
     </div>
