--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
       <div id="scoreboard" class="section">
         <ol>
-          <li class="tries"><img src="images/liveHeart.png" height="35" widght="30"></li>
-          <li class="tries"><img src="images/liveHeart.png" height="35" widght="30"></li>
-          <li class="tries"><img src="images/liveHeart.png" height="35" widght="30"></li>
-          <li class="tries"><img src="images/liveHeart.png" height="35" widght="30"></li>
-          <li class="tries"><img src="images/liveHeart.png" height="35" widght="30"></li>
+          <li class="tries"><img src="images/liveHeart.png" alt="heart" height="35" width="30"></li>
+          <li class="tries"><img src="images/liveHeart.png" alt="heart" height="35" width="30"></li>
+          <li class="tries"><img src="images/liveHeart.png" alt="heart" height="35" width="30"></li>
+          <li class="tries"><img src="images/liveHeart.png" alt="heart" height="35" width="30"></li>
+          <li class="tries"><img src="images/liveHeart.png" alt="heart" height="35" width="30"></li>
         </ol>
       </div>
     </div>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
